--- a/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/Attributes.mxml
+++ b/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/Attributes.mxml
@@ -4,7 +4,7 @@
 					 xmlns:mx="library://ns.adobe.com/flex/mx"  
 					 xmlns:ns="net.vdombox.object_editor.model.*"
 					 xmlns:ns2="net.vdombox.object_editor.view.*"
-					 label="Atributes">
+					 label="Attributes">
 	<fx:Declarations>
 		<!-- Place non-visual elements (e.g., services, value objects) here -->
 	</fx:Declarations>
@@ -13,7 +13,18 @@
 			import mx.collections.ArrayCollection;
 			
 			[Bindable]
-			public var currentItem:Object;
+			public var currentAttribute:Object;
+						
+			public function clearAttributeFields():void
+			{
+				fname.text				= null;
+				displayName.text		= null;
+				errMessage.text			= null;//надо удалять содержимое?
+				visibleAtr.selected		= false;
+				help.text				= null;
+				
+				attributesList.dataProvider = null;
+			}
 			
 			[Bindable]
 			public var arInterfaceType:ArrayCollection = new ArrayCollection(
@@ -47,13 +58,8 @@
 					{label:"ObjectList(type_id)", data:"ObjectList(type_id)"}, 
 					{label:"ExternalEditor(Title, Info)", data:"ExternalEditor(Title, Info)"}
 				]);	
-			
-			public function viewChanged():void
-			{				
-				dispatchEvent(new Event( Event.CHANGE ));
-			}
-			
-			public function nameChange():void
+					
+			public function changeField():void
 			{
 				dispatchEvent(new Event( Event.CHANGE ));
 			}
@@ -61,7 +67,7 @@
 	</fx:Script>
 	<s:HGroup>
 		<s:VGroup height="{300}">
-			<s:List id="attributesList" height="{height- 50}" width="100%" change="this.currentItem=List(event.target).selectedItem"/>
+			<s:List id="attributesList" height="{height- 50}" width="100%" change="this.currentAttribute=List(event.target).selectedItem"/>
 			<s:HGroup>
 				<s:Button id="addAttributeButton" label="Add"/>
 				<s:Button id="deleteAttributeButton" label="Delete" enabled="{attributesList.selectedIndex != -1}"/>
@@ -71,52 +77,52 @@
 			<mx:FormHeading fontSize="10"  label="Enter values into the form." paddingTop="0" />
 			
 			<mx:FormItem label="Name" toolTip="Имя объекта">
-				<mx:TextInput id="fname" width="250" change="{nameChange()}"/>
+				<mx:TextInput id="fname" width="250" change="{changeField()}"/>
 			</mx:FormItem>
 			
 			<mx:FormItem label="DisplayName" >
-				<ns2:LangTextArea id="DisplayName" width="250" height="20" change="{viewChanged()}" />
+				<ns2:LangTextArea id="displayName" width="250" height="20" change="{changeField()}" />
 			</mx:FormItem >
 			
 			<mx:FormItem label="DefaultValue" toolTip="Значение по умолчанию">
-				<mx:TextInput id="defaultValue" width="250" change="{viewChanged()}"/>
+				<mx:TextInput id="defaultValue" width="250" change="{changeField()}"/>
 			</mx:FormItem>
 						
 			<mx:FormItem label="RegExp" >
 				<s:HGroup>
-					<s:TextInput id="regExp" width="250"  change="{viewChanged()}"/>
+					<s:TextInput id="regExp" width="250"  change="{changeField()}"/>
 					<!--s:Button label="..." width="30" click="{}" /-->
 				</s:HGroup>
 			</mx:FormItem>
 			
 			<mx:FormItem label="Error Validation Message">
 				<!--s:TextArea id="fErrMessage" width="200" change="{viewChanged()}" height="40" verticalScrollPolicy="auto"/-->
-				<ns2:LangTextArea id="fErrMessage" width="200" height="40" change="{viewChanged()}"/>
+				<ns2:LangTextArea id="errMessage" width="200" height="40" change="{changeField()}"/>
 			</mx:FormItem>
 			
 			<mx:FormItem label="Visible" >
-				<s:CheckBox id="visibleAtr" label="Visible atribute"  toolTip="Отображаемый в редакторе" change="{viewChanged()}"/>
+				<s:CheckBox id="visibleAtr" label="Visible atribute"  toolTip="Отображаемый в редакторе" change="{changeField()}"/>
 			</mx:FormItem>
 			
 			<mx:FormItem  label="Help">
-				<ns2:LangTextArea id="helpAtr" width="250" height="40" change="{viewChanged()}"/>
+				<ns2:LangTextArea id="help" width="250" height="40" change="{changeField()}"/>
 			</mx:FormItem >
 
 			<mx:FormItem label="InterfaceType" 
 						 toolTip="Значения: 1 - Standard, 2 - RichText Editor, 3 - Text Editor, 4 - Picture, 5 - Special Table">
-				<s:ComboBox id="interfaceType" dataProvider="{arInterfaceType}" width="250" change="{viewChanged()}"/>
+				<s:ComboBox id="interfaceType" dataProvider="{arInterfaceType}" width="250" change="{changeField()}"/>
 			</mx:FormItem>
 						
 			<mx:FormItem label="CodeInterface" >
 				<s:HGroup>
-					<s:ComboBox id="codeInterface" dataProvider="{arCodeInterface}" width="250" change="{viewChanged()}"/>
+					<s:ComboBox id="codeInterface" dataProvider="{arCodeInterface}" width="250" change="{changeField()}"/>
 					<!--s:Button label="..." width="30" click="{}"/-->
 				</s:HGroup>
 			</mx:FormItem>
 			
 			<mx:FormItem label="Colorgroup" 
 						 toolTip="Цветовая группа атрибута, значения: 1 - Grey, 2 - Red, 3 - Green, 4 - Blue">
-				<s:ComboBox id="colorgroup" dataProvider="{arColorGroup}" width="250" change="{viewChanged()}"/>
+				<s:ComboBox id="colorgroup" dataProvider="{arColorGroup}" width="250" change="{changeField()}"/>
 			</mx:FormItem>
 				
 		</mx:Form>		
