--- a/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/Libraries.mxml
+++ b/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/Libraries.mxml
@@ -122,19 +122,18 @@
 	<s:HGroup width="100%" height="100%">
 		<s:VGroup width="200" height="100%">
 			<s:List id="librariesList" width="100%"  height="100%"   
-					
 					change="this.currentLibrary=List(event.target).selectedItem" 
 					skinClass="spark.skins.spark.ListSkin"/>
 			
 			<s:HGroup right="0" >
 				<s:Button id="addLibraryButton" label="Add"/>
-				<s:Button id="deleteLibraryButton" label="Delete"/>
+				<s:Button id="deleteLibraryButton" label="Delete" enabled="{librariesList.selectedIndex != -1}"/>
 			</s:HGroup>
 		</s:VGroup>
 		<s:VGroup width="100%" height="100%">	
 			<s:HGroup  right="0">
 				<s:Label text="Target:"/>
-				<s:TextInput id="target" text="this.currentLibrary.target" change="saveChange()" />
+				<s:TextInput id="target" change="saveChange()" />
 				<!--s:Label text="Target: 'HTML'"/-->
 			</s:HGroup>
 			<mx:TextArea  id="code"  width="100%" height="100%" change="{saveChange()}"/>
