--- a/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/Libraries.mxml
+++ b/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/Libraries.mxml
@@ -132,9 +132,8 @@
 		</s:VGroup>
 		<s:VGroup width="100%" height="100%">	
 			<s:HGroup  right="0">
-				<s:Label text="Target:"/>
+				<s:Label text="Target:" paddingTop="5"/>
 				<s:TextInput id="target" change="saveChange()" />
-				<!--s:Label text="Target: 'HTML'"/-->
 			</s:HGroup>
 			<mx:TextArea  id="code"  width="100%" height="100%" change="{saveChange()}"/>
 		</s:VGroup>	
