--- a/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/Libraries.mxml
+++ b/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/Libraries.mxml
@@ -89,18 +89,7 @@
 			}*/
 			[Bindable]
 			public var currentLibrary:Object;
-			
-			/*private function libTarget():String
-			{
-				if( currentLibrary.target )
-				{
-					return currentLibrary.target;
-				}
-				else
-				{
-					return "";
-				}
-			}*/
+
 			public function clearLibraryFields():void
 			{
 				target.text	= null;				
@@ -112,7 +101,7 @@
 				code.text	= null;				
 			}
 
-			public function saveChange():void
+			public function changeField():void
 			{
 				dispatchEvent(new Event( Event.CHANGE ));
 			}						
@@ -133,9 +122,9 @@
 		<s:VGroup width="100%" height="100%">	
 			<s:HGroup  right="0">
 				<s:Label text="Target:" paddingTop="5"/>
-				<s:TextInput id="target" change="saveChange()" />
+				<s:TextInput id="target" change="changeField()" />
 			</s:HGroup>
-			<mx:TextArea  id="code"  width="100%" height="100%" change="{saveChange()}"/>
+			<mx:TextArea  id="code"  width="100%" height="100%" change="{changeField()}"/>
 		</s:VGroup>	
 	</s:HGroup>
 </s:NavigatorContent>
