git-svn-id: http://svn.vdombox.ru/flextools/trunk@6552 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/components/SignatureGroup.mxml
+++ b/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/components/SignatureGroup.mxml
@@ -8,6 +8,7 @@
 	<fx:Script>
 		<![CDATA[
 			import spark.filters.DropShadowFilter;
+			import spark.skins.spark.ComboBoxSkin;
 			[Bindable]
 			public var color : uint;
 
@@ -16,6 +17,8 @@
 		]]>
 	</fx:Script>
 
+	
+	
 	<s:Ellipse bottom="0" left="0" right="0" top="0">
 		<s:fill>
 			<mx:SolidColor color="{ color }"/>
