git-svn-id: http://svn.vdombox.ru/flextools/trunk@6556 230e8929-42e3-3b44-a413-55659dd3a577

--- a/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/Actions.mxml
+++ b/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/Actions.mxml
@@ -43,6 +43,7 @@
 				
 				interfaceName.text		= "";
 				methodName.text			= "";
+				description.text		= "";
 				sourceCode.text			= "";
 				
 				parametersList.dataProvider = null;
@@ -67,7 +68,7 @@
 			<s:HGroup width="100%">
 				<s:HGroup width="100%"/>
 				<s:Button id="addContainer" label="Add"/>
-				<s:Button id="deleteContainer" label="Delete" enabled="{actionsList.selectedIndex != -1}"/>
+				<s:Button id="deleteContainer" label="Delete" enabled="{containersList.selectedIndex != -1}"/>
 			</s:HGroup>
 			<mx:FormHeading fontSize="10"  label="Select Action:" paddingTop="10" />
 			<s:List id="actionsList" width="200" height="{height- 200}" change="this.currentAction=List(event.target).selectedItem"/>
