git-svn-id: http://svn.vdombox.ru/flextools/trunk@6570 230e8929-42e3-3b44-a413-55659dd3a577

--- a/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/Actions.mxml
+++ b/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/Actions.mxml
@@ -27,7 +27,7 @@
 			
 			public function clearContainerFields():void
 			{
-				currentContainer 		= null; // зачем?
+				//currentContainer 		= null; // зачем?
 				currentAction 	 		= null;
 				currentParameter 		= null;	
 				
