--- a/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/Actions.mxml
+++ b/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/Actions.mxml
@@ -61,83 +61,92 @@
 			}
 		]]>
 	</fx:Script>
-	
-	<s:HGroup>
-		<mx:Form  width="100%" height="100%" paddingTop="0">
+	<s:VGroup x="10"  gap="20">
+		<s:VGroup >
+			<s:Label  text="Containers:" fontSize="20"/>
 			<s:List id="containersList" width="200" height="80" change="this.currentContainer=List(event.target).selectedItem"/>
 			<s:HGroup width="100%">
-				<s:HGroup width="100%"/>
 				<s:Button id="addContainer" label="Add"/>
 				<s:Button id="deleteContainer" label="Delete" enabled="{containersList.selectedIndex != -1}"/>
 			</s:HGroup>
-			<mx:FormHeading fontSize="10"  label="Select Action:" paddingTop="10" />
-			<s:List id="actionsList" width="200" height="{height- 200}" change="this.currentAction=List(event.target).selectedItem"/>
+		</s:VGroup>
+		<s:Label  text="Actions:" fontSize="20"/>
+		<mx:HRule width="100%"/>
+	<s:HGroup>
+		<s:VGroup  width="100%" height="100%" paddingTop="0">
+			<s:List id="actionsList" width="200" height="{height- 250}" change="this.currentAction=List(event.target).selectedItem"/>
 			<s:HGroup width="100%">
 				<s:HGroup width="100%"/>
 				<s:Button id="addAction" label="Add"/>
 				<s:Button id="deleteAction" label="Delete" enabled="{actionsList.selectedIndex != -1}"/>
 			</s:HGroup>
-		</mx:Form >
-		<mx:Form  width="100%" height="100%"  paddingTop="0" paddingLeft="0" >
-			<mx:FormHeading fontSize="10"  label="Actions details:" paddingTop="0" />
-			<mx:FormItem label="MethodName:" toolTip="Name">
-				<mx:TextInput id="methodName" width="150" change="{changeField()}" />
-			</mx:FormItem>				
-			<mx:FormItem label="Description:" toolTip="Name">
-				<ns2:LangTextArea id="description" width="150" height="40" change="{changeField()}" />
-			</mx:FormItem>
-			<mx:FormItem label="InterfaceName:" toolTip="Name">
-				<ns2:LangTextArea id="interfaceName" width="150" height="40" change="{changeField()}" />
-			</mx:FormItem>			
-			
-			<s:HGroup width="100%"/>
-			<s:Label text="Select parameter:" />
-			<s:List id="parametersList" width="100%" height="{height - 205}" change="this.currentParameter=List(event.target).selectedItem" /><!--dataProvider="{arParameters}"   change="{changeParameter()}"/-->
-			<s:HGroup width="100%" >
-				<s:HGroup width="100%"/>
-				<s:Button id="addParameter" label="Add" />
-				<s:Button id="deleteParameter" label="Delete" enabled="{parametersList.selectedIndex != -1}"/>
-			</s:HGroup>
-		</mx:Form>
-		<mx:Form width="100%" color="0x323232" paddingTop="0" paddingLeft="0">
-			<mx:FormHeading fontSize="10"  label="Parameters detais:" paddingTop="0" />
-			
-			<mx:FormItem label="ScriptName:" toolTip="Это VbType">
-				<mx:TextInput id="parScriptName" width="200" change="{changeField()}" />
-			</mx:FormItem>
-			
-			<mx:FormItem label="DefaultValue:" toolTip="Имя объекта">
-				<mx:TextInput id="parDefaultValue" width="200" change="{changeField()}"/>
-			</mx:FormItem>
-			
-			<mx:FormItem label="Help:" toolTip="Это Help">
-				<s:HGroup>
-					<ns2:LangTextArea id="parHelp" width="200" height="40" change="{changeField()}"/>
-				</s:HGroup>
-			</mx:FormItem>
-			
-			<mx:FormItem label="Interface:" toolTip="Это ордер">
-				<mx:TextInput id="parInterface" width="200" change="{changeField()}"/>
-			</mx:FormItem>
-			
-			<mx:FormItem label="InterfaceName:" toolTip="Это VbType">
-				
-				<ns2:LangTextArea id="parInterfaceName" width="200" height="40" change="{changeField()}"/>
-			</mx:FormItem>
-								
-			<mx:FormItem label="RegExp" >
-				<s:HGroup>
-					<s:TextInput id="parRegExp" width="200"  change="{changeField()}"/>
-					<!--s:Button label="..." width="30" click="{}" /-->
-				</s:HGroup>
-			</mx:FormItem>
-			
-			<s:VGroup >
-				<s:Label paddingLeft="10" text="Source Code:"/>
-				<s:TextArea  id="sourceCode"  width="305" height="100%" change="{changeField()}"/>
-			</s:VGroup>
-			
-		</mx:Form>
+		</s:VGroup >
+		<s:VGroup >
+			<s:Label paddingLeft="10" text="Details:" fontSize="15" fontWeight="bold"/>
+			<s:HGroup >
+				<mx:Form  width="100%" height="100%"  paddingTop="0" paddingLeft="0" >
+					
+					<mx:FormItem label="MethodName:" toolTip="Name">
+						<mx:TextInput id="methodName" width="150" change="{changeField()}" />
+					</mx:FormItem>				
+					<mx:FormItem label="Description:" toolTip="Name">
+						<ns2:LangTextArea id="description" width="150" height="40" change="{changeField()}" />
+					</mx:FormItem>
+					<mx:FormItem label="InterfaceName:" toolTip="Name">
+						<ns2:LangTextArea id="interfaceName" width="150" height="40" change="{changeField()}" />
+					</mx:FormItem>			
+				</mx:Form>
+				<s:VGroup >
+					<s:Label paddingLeft="10" text="Source Code:"/>
+					<s:TextArea  id="sourceCode"  width="305" height="100" change="{changeField()}"/>
+				</s:VGroup>
+			</s:HGroup >
+			<s:HGroup  >
+				<s:Label text="Parameters:" />
+				<s:VGroup color="#1100ff">
+					
+					<s:List id="parametersList" width="100%" height="{height - 455}" change="this.currentParameter=List(event.target).selectedItem" /><!--dataProvider="{arParameters}"   change="{changeParameter()}"/-->
+					<s:HGroup width="100%" >
+						<s:HGroup width="100%"/>
+						<s:Button id="addParameter" label="Add" />
+						<s:Button id="deleteParameter" label="Delete" enabled="{parametersList.selectedIndex != -1}"/>
+					</s:HGroup>
+				</s:VGroup>
+				<mx:Form width="100%" color="0x323232" paddingTop="0" paddingLeft="0">
+					<mx:FormHeading fontSize="10"  label="Parameters detais:" paddingTop="0" />
+					
+					<mx:FormItem label="ScriptName:" toolTip="Это VbType">
+						<mx:TextInput id="parScriptName" width="200" change="{changeField()}" />
+					</mx:FormItem>
+					
+					<mx:FormItem label="DefaultValue:" toolTip="Имя объекта">
+						<mx:TextInput id="parDefaultValue" width="200" change="{changeField()}"/>
+					</mx:FormItem>
+					
+					<mx:FormItem label="Help:" toolTip="Это Help">
+						<s:HGroup>
+							<ns2:LangTextArea id="parHelp" width="200" height="40" change="{changeField()}"/>
+						</s:HGroup>
+					</mx:FormItem>
+					
+					<mx:FormItem label="Interface:" toolTip="Это ордер">
+						<mx:TextInput id="parInterface" width="200" change="{changeField()}"/>
+					</mx:FormItem>
+					
+					<mx:FormItem label="InterfaceName:" toolTip="Это VbType">
+						
+						<ns2:LangTextArea id="parInterfaceName" width="200" height="40" change="{changeField()}"/>
+					</mx:FormItem>
+					
+					<mx:FormItem label="RegExp" >
+						<s:HGroup>
+							<s:TextInput id="parRegExp" width="200"  change="{changeField()}"/>
+							<!--s:Button label="..." width="30" click="{}" /-->
+						</s:HGroup>
+					</mx:FormItem>
+				</mx:Form>
+			</s:HGroup >
+		</s:VGroup >
 	</s:HGroup>
-
+	</s:VGroup>
 </s:NavigatorContent>
