--- a/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/Information.mxml
+++ b/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/Information.mxml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <s:NavigatorContent xmlns:fx="http://ns.adobe.com/mxml/2009" 
 		 xmlns:s="library://ns.adobe.com/flex/spark" 
-		 xmlns:mx="library://ns.adobe.com/flex/mx" width="100%" height="100%" 
+		 xmlns:mx="library://ns.adobe.com/flex/mx"  
 		 xmlns:OEComponents="OEComponents.*"
 		 
 		 xmlns:ns="net.vdombox.object_editor.model.*"
 		 label="Information" 
 		 xmlns:ns1="net.vdombox.object_editor.view.essence.*" 
-		 xmlns:ns2="net.vdombox.object_editor.view.*">
+		 xmlns:ns2="net.vdombox.object_editor.view.*"
+		 >
 	<fx:Declarations>
 		<!-- Place non-visual elements (e.g., services, value objects) here -->
 		<s:RadioButtonGroup id="group1"/>
@@ -53,9 +54,11 @@
 		}
 		]]>
 	</fx:Script>
-	
-	<s:HGroup >
-		<mx:Form width="100%" color="0x323232" paddingTop="0">
+	<s:Scroller width="{this.width}">
+	<s:HGroup  >
+		
+
+		<mx:Form color="0x323232" paddingTop="0" >
 		<mx:FormHeading fontSize="10"  label="Enter values into the form." paddingTop="0" />
 		
 		<mx:FormItem label="Name" toolTip="Имя объекта">
@@ -124,7 +127,7 @@
 		</mx:FormItem>			
 	</mx:Form>
 	
-		<mx:Form width="100%" color="0x323232" paddingTop="0">
+		<mx:Form color="0x323232" paddingTop="0">
 			<mx:FormItem >	
 				<s:CheckBox id="fMoveable" label="Moveable"  toolTip="1 - перемещаемый объект, 0 - нет" change="{viewChanged()}"/>
 				<s:CheckBox id="fDynamic" label="Dynamic"  toolTip="1 - перемещаемый объект, 0 - нет" change="{viewChanged()}"/>
@@ -183,4 +186,5 @@
 			</mx:FormItem>
 		</mx:Form>
 	</s:HGroup>
+		</s:Scroller >
 </s:NavigatorContent>
