--- a/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/Information.mxml
+++ b/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/Information.mxml
@@ -54,7 +54,7 @@
 		}
 		]]>
 	</fx:Script>
-	<s:Scroller width="{this.width}">
+	<s:Scroller width="{this.width}" height="{this.height}">
 	<s:HGroup  >
 		
 
