git-svn-id: http://svn.vdombox.ru/flextools/trunk@6587 230e8929-42e3-3b44-a413-55659dd3a577

--- a/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/Actions.mxml
+++ b/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/Actions.mxml
@@ -27,10 +27,9 @@
 			
 			public function clearContainerFields():void
 			{
-				//currentContainer 		= null; // зачем?
-				currentAction 	 		= null;
-				currentParameter 		= null;	
-				
+				//currentContainer 		 = null; // зачем?
+				currentAction 	 		 = null;
+				currentParameter 		 = null;					
 				actionsList.dataProvider = null;
 				clearActionFields();
 			}
@@ -41,10 +40,10 @@
 				//				currentAction 	 		= null;
 				//				currentParameter		= null;
 				
-				interfaceName.text		= "";
-				methodName.text			= "";
-				description.text		= "";
-				sourceCode.text			= "";
+				methodName.text		   = "";
+				sourceCode.text		   = "";
+				interfaceName.clearTextArea();
+				description.clearTextArea();				
 				
 				parametersList.dataProvider = null;
 				clearParameterFields();
@@ -52,12 +51,13 @@
 			
 			public function clearParameterFields():void
 			{
-				parDefaultValue.text	= "";
-				parHelp.text			= "";
-				parInterface.text		= "";
-				parInterfaceName.text	= "";
+				parDefaultValue.text	= "";				
+				parInterface.text		= "";				
 				parScriptName.text		= "";
-				parRegExp.text			= "";				
+				parRegExp.text			= "";
+				
+				parInterfaceName.clearTextArea();
+				parHelp.clearTextArea();
 			}
 		]]>
 	</fx:Script>
