--- a/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/Information.mxml
+++ b/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/Information.mxml
@@ -100,7 +100,9 @@
 		</mx:FormItem-->
 			
 		<mx:FormItem label="Category" toolTip="Категория объекта (Usual, Standard...)" width="100%" >
-			<mx:TextInput id="fCategory" width="100%"  change="{viewChanged()}"/>
+			<s:VGroup>
+				<ns2:ObjectCategory id="fCategory"/>
+			</s:VGroup>
 		</mx:FormItem>
 		
 		<mx:FormItem label="Version" toolTip="Текущая версия объекта">
