--- a/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/Attributes.mxml
+++ b/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/Attributes.mxml
@@ -47,25 +47,65 @@
 
 			[Bindable]
 			public var arCodeInterface:ArrayCollection = new ArrayCollection(
-				[ 	{label:"TextField(Length)", 		 data:"TextField(Length)"},
-					{label:"Number(minValue, maxValue)", data:"Number(minValue, maxValue)"}, 
-					{label:"MultiLine(Length)", 		 data:"MultiLine(Length)"}, 
-					{label:"!Font()", 					 data:"!Font()"}, 
-					{label:"DropDown(Values)", 			 data:"DropDown(Values)"}, 
-					{label:"File()", 					 data:"File()"}, 
-					{label:"Color()", 					 data:"Color()"}, 
-					{label:"PageLink()", 				 data:"PageLink()"}, 
-					{label:"LinkedBase()",				 data:"LinkedBase()"}, 
-					{label:"ObjectList()", 				 data:"ObjectList()"}, 
-					{label:"ObjectList(type_id)", 		 data:"ObjectList(type_id)"}, 
-					{label:"ExternalEditor(Title, Info)",data:"ExternalEditor(Title, Info)"}
+				[ 	{label:"TextField", 		data:"TextField(Length)"},
+					{label:"Number1", 			data:"Number(minValue, maxValue)"}, 
+					{label:"MultiLine", 		data:"MultiLine(Length)"}, 
+					{label:"Font", 				data:"!Font()"}, 
+					{label:"DropDown", 			data:"DropDown(Values)"}, 
+					{label:"File", 				data:"File()"}, 
+					{label:"Color", 			data:"Color()"}, 
+					{label:"PageLink", 			data:"PageLink()"}, 
+					{label:"LinkedBase",		data:"LinkedBase()"}, 
+					{label:"ObjectList", 		data:"ObjectList(type_id)"}, 
+					{label:"ExternalEditor",	data:"ExternalEditor(Title, Info)"}
 				]);	
 								
-			public function changeField():void
+			private function changeField():void
 			{
 				dispatchEvent(new Event( Event.CHANGE ));
 			}
 			
+			private function changeStack():void
+			{				
+				var label:String = codeInterface.selectedItem.label;
+//				var data: String = new String();
+				if( label != "Font" &&
+					label != "File" &&
+					label != "Color" &&
+					label != "PageLink" &&
+					label != "LinkedBase" )
+				{
+					var ch:* = myViewStack.getChildByName(codeInterface.selectedItem.label);
+					myViewStack.selectedChild = ch;
+					setData(label);
+				}	
+				else
+				{
+					myViewStack.selectedChild = notArguments;
+				}
+				dispatchEvent(new Event( Event.SELECT));
+			}
+			
+			private function setData( label:String ):void
+			{
+//				var obj:Object = new Object();
+				switch ( label ) 
+				{					
+					case "Number1":
+//						obj = arCodeInterface[1];
+						arCodeInterface[1].data = label + "(" + minValue + "," + maxValue + ")";
+						break;
+					case "MultiLine":
+//						obj = arCodeInterface[2];
+						arCodeInterface[2].data = label + "(" + multiLineLength + ")";
+						break;
+					case "Font":
+//						obj = arCodeInterface[3];
+						arCodeInterface[3].data = "!" + label + "()";
+						break;
+				}
+			}
+						
 		]]>
 	</fx:Script>
 	<s:Scroller width="{this.width}" height="{this.height}">
@@ -116,19 +156,100 @@
 						 toolTip="Значения: 1 - Standard, 2 - RichText Editor, 3 - Text Editor, 4 - Picture, 5 - Special Table">
 				<s:ComboBox id="interfaceType" dataProvider="{arInterfaceType}" width="250" change="{changeField()}"/>
 			</mx:FormItem>
-						
-			<mx:FormItem label="CodeInterface" >
-				<s:HGroup>
-					<s:ComboBox id="codeInterface" dataProvider="{arCodeInterface}" width="250" change="{changeField()}"/>
-					<!--s:Button label="..." width="30" click="{}"/-->
-				</s:HGroup>
-			</mx:FormItem>
 			
 			<mx:FormItem label="Colorgroup" 
 						 toolTip="Цветовая группа атрибута, значения: 1 - Grey, 2 - Red, 3 - Green, 4 - Blue">
 				<s:ComboBox id="colorgroup" dataProvider="{arColorGroup}" width="250" change="{changeField()}"/>
 			</mx:FormItem>
-				
+			
+			<mx:FormItem label="CodeInterface" >
+				<s:HGroup>
+					<s:ComboBox change="{changeStack()}" id="codeInterface" dataProvider="{arCodeInterface}" width="250" />
+				</s:HGroup>
+				<mx:ViewStack id="myViewStack" borderStyle="solid" width="250" height="120" color="0x323232">
+					
+					<s:NavigatorContent id="TextField" fontWeight="bold" >						
+						<s:layout>
+							<s:VerticalLayout horizontalAlign="center"  
+											  paddingTop="5" paddingLeft="5" 
+											  paddingRight="5" paddingBottom="5" />
+						</s:layout>
+						
+						<s:HGroup>
+							<s:Label 	 text="Length:"/>
+							<s:TextInput id="fieldLength" width="180" change="changeStack()"/>							
+						</s:HGroup>
+					</s:NavigatorContent>
+					
+					<s:NavigatorContent id="Number1" fontWeight="bold" >						
+						<s:layout>
+							<s:VerticalLayout horizontalAlign="center"  
+											  paddingTop="5" paddingLeft="5" 
+											  paddingRight="5" paddingBottom="5" />
+						</s:layout>
+						
+						<s:VGroup>
+							<s:Label 	 text="min Value"/>
+							<s:TextInput id="minValue" width="200" change="changeStack()"/>
+							<s:Label 	 text="max Value"/>
+							<s:TextInput id="maxValue" width="200" change="changeStack()"/>
+						</s:VGroup>
+					</s:NavigatorContent>
+					
+					<s:NavigatorContent id="MultiLine" fontWeight="bold" >
+						<s:layout>
+							<s:VerticalLayout horizontalAlign="center"  
+											  paddingTop="5" paddingLeft="5" 
+											  paddingRight="5" paddingBottom="5" />
+						</s:layout>
+						<s:HGroup>
+							<s:Label 	 text="Length:"/>
+							<s:TextInput id="multiLineLength" width="180" change="changeStack()"/>
+						</s:HGroup>
+					</s:NavigatorContent>
+					
+					<s:NavigatorContent id="DropDown" fontWeight="bold" >
+						<s:layout>
+							<s:VerticalLayout horizontalAlign="center"  
+											  paddingTop="5" paddingLeft="5" 
+											  paddingRight="5" paddingBottom="5" />
+						</s:layout>
+						<s:HGroup>
+							<s:Label 	 text="Values:"/>
+							<s:TextInput id="ddValues" width="180" change="changeStack()"/>
+						</s:HGroup>
+					</s:NavigatorContent>
+					
+					<s:NavigatorContent id="ObjectList" fontWeight="bold" >
+						<s:layout>
+							<s:VerticalLayout horizontalAlign="center"  
+											  paddingTop="5" paddingLeft="5" 
+											  paddingRight="5" paddingBottom="5" />
+						</s:layout>
+						<s:HGroup>
+							<s:Label	 text="type id:"/>
+							<s:TextInput id="typeId" width="180" change="changeStack()"/>
+						</s:HGroup>
+					</s:NavigatorContent>
+					
+					<s:NavigatorContent id="ExternalEditor" fontWeight="bold" >
+						<s:layout>
+							<s:VerticalLayout horizontalAlign="center"  
+											  paddingTop="5" paddingLeft="5" 
+											  paddingRight="5" paddingBottom="5" />
+						</s:layout>
+						<s:VGroup>
+							<s:Label 		text="Title:"/>
+							<s:TextInput	id="title" width="200" change="changeStack()"/>
+							<s:Label  		text="Info:"/>
+							<s:TextInput 	id="info"  width="200" change="changeStack()"/>
+						</s:VGroup>
+					</s:NavigatorContent>
+					
+					<s:NavigatorContent id="notArguments"/>								
+				</mx:ViewStack>
+			</mx:FormItem>
+			
 		</mx:Form>		
 	</s:HGroup>
 	</s:Scroller >
